--- a/index.html
+++ b/index.html
@@ -9,29 +9,7 @@
     <script src="https://kit.fontawesome.com/f2e526fe3a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  
-  <div class="glowing">
-    <span style="--i:1;"></span>
-    <span style="--i:2;"></span>
-    <span style="--i:3;"></span>
-  </div>
-
-  <div class="glowing">
-    <span style="--i:1;"></span>
-    <span style="--i:2;"></span>
-    <span style="--i:3;"></span>
-  </div>
-  <div class="glowing">
-    <span style="--i:1;"></span>
-    <span style="--i:2;"></span>
-    <span style="--i:3;"></span>
-  </div>
-  
-  <header>
-   
-
-   
-
+  <header class="glow">
     <nav>
         <h2 class="logo">Portfolio</h2>
         <ul>
@@ -42,12 +20,16 @@
         </ul>
     </nav>
     <div class="content" id="content">
+      <div class="left">
         <h4>Hello, my name is</h4>
         <h1>Alina Vsilyeva<span></span></h1>
-        <h3>I am <span class="multiple-text">Front-End Developer.</span></h3>
+        <h3>I am <span class="typing">Front-End Developer.</span></h3>
         <a href="./Resume.pdf" style="font-size: larger;" class="btn" target="_blank">My Resume</a>
+      </div>
+ <div class="right">
+        <img src="./peony.png" alt="Peony" class="peony">
     </div>
-
+   </div>
   </header>
 <section class="about" id="about">
   <div class="main">
