--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
       <h1 class="projects-main">PROJECTS</h1>
       <div class="project">
         <div class="project-container">
-          <img class="project-image" src=".." alt="Project 1">
-          <a class="project-link" href="./" target="_blank"><div class="btn">Project 1</div></a>
-          <p class="project-description">Art+Ai</p>
+          <img class="project-image" src="./Converter.png" alt="Project 1">
+          <a class="project-link" href="https://alina7121.github.io/-Converter/" target="_blank"><div class="btn">#1</div></a>
+          <p class="project-description">Currency Converter</p>
         </div>
   
         <div class="project-container">
-          <img class="project-image" src=".." alt="Project 2">
-          <a class="project-link" href=".." target="_blank"><div class="btn">Project 2</div></a>
-          <p class="project-description">Albany Medical Clinic Redesign</p>
+          <img class="project-image" src="./DQ.png" alt="Project 2">
+          <a class="project-link" href=".." target="_blank"><div class="btn">#2</div></a>
+          <p class="project-description">Drive Quest</p>
         </div>
   
         <div class="project-container">
-          <img class="project-image" src=".." alt="Project 3">
-          <a class="project-link" href=".." target="_blank"><div class="btn">Project 3</div></a>
-          <p class="project-description">blah blah</p>
+          <img class="project-image" src="./d.png" alt="Project 3">
+          <a class="project-link" href="https://alina7121.github.io/Dice/" target="_blank"><div class="btn">#3</div></a>
+          <p class="project-description">Roll the Dice</p>
         </div>
     
       </div>
