--- a/index.html
+++ b/index.html
@@ -53,20 +53,23 @@
       <h1 class="projects-main">PROJECTS</h1>
       <div class="project">
         <div class="project-container">
-          <img class="project-image" src="./Converter.png" alt="Project 1">
+          <img class="project-image" src="./noBG.png" alt="Project 1">
           <a class="project-link" href="https://alina7121.github.io/-Converter/" target="_blank"><div class="btn">#1</div></a>
+          <br><br>
           <p class="project-description">Currency Converter</p>
         </div>
   
         <div class="project-container">
           <img class="project-image" src="./DQ.png" alt="Project 2">
           <a class="project-link" href=".." target="_blank"><div class="btn">#2</div></a>
+          <br><br>
           <p class="project-description">Drive Quest</p>
         </div>
   
         <div class="project-container">
           <img class="project-image" src="./d.png" alt="Project 3">
           <a class="project-link" href="https://alina7121.github.io/Dice/" target="_blank"><div class="btn">#3</div></a>
+          <br><br>
           <p class="project-description">Roll the Dice</p>
         </div>
     
