--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <script src="https://kit.fontawesome.com/f2e526fe3a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="glow">
+  <header id="home" class="glow">
     <nav>
         <h2 class="logo">Portfolio</h2>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li> 
-            <li><a href="#contactme">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <div class="content" id="content">
       <div class="left">
         <h4>Hello, my name is</h4>
-        <h1>Alina Vsilyeva<span></span></h1>
+        <h1>Alina Vasilyeva<span></span></h1>
         <h3>I am <span class="typing">Front-End Developer.</span></h3>
         <a href="./Resume.pdf" style="font-size: larger;" class="btn" target="_blank">My Resume</a>
       </div>
@@ -37,17 +37,44 @@
     <div class="about-text">
       <h2>About me</h2>
     <h5><span>Front-End Developer</span></h5>
-      <p>Welcome to my portfolio website! <span>I'm a dedicated front-end developer from Toronto, Ontario</span> As a postgraduate specializing in Front-End Web Development, I bring a strong foundation in coding and design to the table.I am passionate about creating intuitive solutions that enhance user experience and drive business success.</p>
+      <p>I am happy to welcome you to my portfolio website! <span> <br>
+        I am a passionate front-end developer based in Toronto, Ontario.</span> 
+        <br> As a postgraduate student specializing in Front-End Web Development, I've acquired a solid foundation in coding and design. My passion is creating user-centric solutions that improve the user experience and contribute to the growth of organizations.</p>
     </div>
+   
+    <div class="skills">
+      <div class="skill">
+        <h3>HTML5</h3>
+        <div class="bar">
+          <div class="html"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>CSS</h3>
+        <div class="bar">
+          <div class="css"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>JavaScript</h3>
+        <div class="bar">
+          <div class="js"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>React</h3>
+        <div class="bar">
+          <div class="react"></div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>Angular</h3>
+        <div class="bar">
+          <div class="angular"></div>
+        </div>
+      </div>
   </div>
 </section>
-<!--<script>
-  function toggleReadMore(button) {
-      const additionalContent = button.parentNode.querySelector('.additional-content');
-      additionalContent.style.display = additionalContent.style.display === 'none' ? 'block' : 'none';
-  }
-</script>-->
-
 <section class="projects" id="projects">
     <div class="max-width">
       <h1 class="projects-main">PROJECTS</h1>
@@ -76,8 +103,7 @@
       </div>
     </div>
   </section>
-   <footer>
-
+ <footer id="contact">
  <div class="welcome-message">
         <p><span>Explore my work</span> and feel free to connect!</p>
     </div>
@@ -95,7 +121,7 @@
        <!--Smiley Winks End-->
     <div class="contact-info">
       <p>Contact Information </p>
-      <p>Email: vasilyeva.alina@icloud.com| Phone: +1(647)719-2501</p>
+      <p>Email: vasilyeva.alina@icloud.com</p>
     </div>
     <br>
     <div class="social">
