--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Labrada:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/f2e526fe3a.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,7 +22,14 @@
             <li><a href="#projects">Projects</a></li> 
             <li><a href="#contact">Contact</a></li>
         </ul>
+           <!--Menu Icon-->
+    <div class="menu-icon">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
     </nav>
+ 
     <div class="content" id="content">
       <div class="left">
         <h4>Hello, my name is</h4>
