adjusted padding in skills section to 15%

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
             <li><a href="#projects">Projects</a></li> 
             <li><a href="#contact">Contact</a></li>
         </ul>
-           <!--Menu Icon-->
+           <!--Menu Icon
+           <div class="menu-icon-wrapper">
     <div class="menu-icon">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
     </div>
+  </div>-->
     </nav>
  
     <div class="content" id="content">
